--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+# Production dependencies for Render deployment
+
 # Core dependencies
 flask==2.3.3
 pandas==2.0.3
@@ -18,7 +20,7 @@ joblib==1.3.2
 
 # Scheduling and threading
 schedule==1.2.0
-gunicorn==21.2.0  # For production deployment
+gunicorn==21.2.0  # For production deployment on Render
 
 # Security
 werkzeug==2.3.7
