--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,15 @@
-# Production dependencies for Render deployment
-
-# Core dependencies
+setuptools>=65.0.0
+wheel
 flask==2.3.3
 pandas==2.0.3
-numpy==1.24.3
+numpy>=1.26.0
 scikit-learn==1.3.0
 matplotlib==3.7.2
-
-# Data fetching
 requests==2.31.0
 geopy==2.3.0
-
-# Visualization
 folium==0.14.0
 pillow==10.0.0
-
-# Serialization
 joblib==1.3.2
-
-# Scheduling and threading
 schedule==1.2.0
-gunicorn==21.2.0  # For production deployment on Render
-
-# Security
+gunicorn==21.2.0
 werkzeug==2.3.7
