--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,14 @@
 setuptools>=65.0.0
 wheel
 flask==2.3.3
-pandas==2.0.3
-numpy>=1.26.0
-scikit-learn==1.3.0
-matplotlib==3.7.2
-requests==2.31.0
-geopy==2.3.0
-folium==0.14.0
-pillow==10.0.0
-joblib==1.3.2
-schedule==1.2.0
+pandas
+numpy
+scikit-learn
+matplotlib
+requests
+geopy
+folium
+pillow
+joblib
+schedule
 gunicorn==21.2.0
-werkzeug==2.3.7
